<resources>
    <string name="app_name">Primeras_aplicaciones</string>

    <string name="hello_world">ESCOGE UNA DE LAS OPCIONES DEL MENU</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hola_mundo">hola_mundo</string>
    <string name="title_activity_checkbox">checkbox</string>
    <string name="title_activity_listview">listview</string>
    <string name="title_activity_textview">textview</string>
    <string name="textview">Textview</string>
    <string name="hola">Hola mundo</string>
    <string name="listview">Listview</string>
    <string name="checkbox">Checkbox</string>
    <string name="mensaje">Mensaje</string>
    <string name="m">Masculino</string>
    <string name="f">Femenino</string>
    <string name="s">Saludos muchachos(as)</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_mensaje">Mensaje</string>
</resources>
