<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.edgar.proyecto.primeras_aplicaciones.checkbox">

    <TextView
        android:text="@string/mensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview"/>
    <CheckBox
        android:id="@+id/chk1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m" />
    <CheckBox
        android:id="@+id/chk2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:id="@+id/enviar" android:text="@string/enviar"/>
</LinearLayout>
